--- a/front/app/sass/main.sass
+++ b/front/app/sass/main.sass
@@ -108,3 +108,8 @@ ul
 .frame
     border: 2px solid #1d1b1b 
 
+.article
+    padding: 50px 10px 
+    margin: 50px 10px
+    box-shadow: 0 0 20px rgba(0,0,0,0.5)
+
